examples/type_system/failing/22_effect_polymorphism_chain_missing_effect.flx
// E400: chained `with e` resolves to IO from callback, but caller only declares Time.

fn apply_once(f: ((Int) -> Int with e), x: Int) -> Int with e {
    f(x)
}

fn wrap_apply(f: ((Int) -> Int with e), x: Int) -> Int with e {
    apply_once(f, x)
}

fn io_inc(x: Int) -> Int with IO {
    print("x=#{to_string(x)}")
    x + 1
}

fn bad() -> Int with Time {
    wrap_apply(io_inc, 41)
}

fn main() with Time {
    bad()
}
